# trios-trainer-igla

./: .dockerignore  .gitignore  .railway-rebuild  CITATION.cff  Cargo.toml  DEPLOYMENT_BLOCKER.md  Dockerfile  Dockerfile.scarab  Dockerfile.scarab.simple  ISSUE_PR71_REGRESSION.md  LICENSE  MIGRATION.md  PR_SCARAB_ENTRYPOINT_FIX.md  RAILWAY_BLOCKER.md  README.md  SOURCE_OF_TRUTH.md  champion_lock.txt  entrypoint.sh  nixpacks-p1.toml  nixpacks-rust91.toml.bak  nixpacks.toml  railway-scarab.json  railway.json  scarab
.github/workflows/: ci.yml  docker-publish.yml  format-algo-matrix.yml  ghcr-public.yml  railway-deploy.yml  smoke.yml  sovereign-scarab-v5.yml  sovereign-scarab.yml
.railway/: config.json
.trinity/: STATUS.md  autonomous-status.md  competitive-analysis-v2.md  dashboard.md  iterative-improvement-plan.md
.trinity/experience/: 53-DELTA.md  trios_20260427.trinity  trios_20260427_pt2.trinity
.trinity/results/: cpu_train_bf16_seed17.json  cpu_train_bf16_seed18.json  cpu_train_bf16_seed19.json  cpu_train_f32_adafactor_seed42.json  cpu_train_f32_adamw_seed42.json  cpu_train_f32_lamb_seed42.json  cpu_train_f32_lion_seed42.json  cpu_train_f32_muon_seed42.json  cpu_train_f32_rmsprop_seed42.json  cpu_train_f32_schedulefree_seed42.json  cpu_train_f32_seed100.json  cpu_train_f32_sgdm_seed42.json  cpu_train_fp16_seed17.json  cpu_train_fp16_seed18.json  cpu_train_fp16_seed19.json  cpu_train_fp32_seed100.json  cpu_train_fp32_seed17.json  cpu_train_fp32_seed18.json  cpu_train_fp32_seed19.json  cpu_train_gf16_seed101.json  cpu_train_gf16_seed17.json  cpu_train_gf16_seed18.json  cpu_train_gf16_seed19.json  cpu_train_gf32_seed17.json  cpu_train_gf32_seed18.json  cpu_train_gf32_seed19.json  cpu_train_gf64_seed17.json  cpu_train_gf64_seed18.json  cpu_train_gf64_seed19.json  cpu_train_gf8_seed17.json  cpu_train_gf8_seed18.json  cpu_train_gf8_seed19.json  cpu_train_gf8_seed42.json  cpu_train_gfternary_seed17.json  cpu_train_gfternary_seed18.json  cpu_train_gfternary_seed19.json  cpu_train_seed17.json  cpu_train_seed18.json  cpu_train_seed19.json  cpu_train_seed42.json
assertions/: agent_keys.json  baseline_profile.json  champion_lock.txt  embargo.txt  hive_automaton.json  hive_honey.jsonl  igla_assertions.json  matrix_samples.jsonl  rainbow_state.jsonl  seed_results.jsonl
assertions/witness/: acm_ae.toml  citetheorem_audit.toml  defense_gate.toml  merge_order_gate.toml  page_gate.toml
configs/: champion.toml  gate2-attempt.toml  gate2-final.toml  needle-v1-mup.toml
configs/iterative/: v1_hidden_sweep.toml  v2_lr_sweep.toml  v3_depth_sweep.toml  v4_seq_len_sweep.toml  v5_weights_sweep.toml
configs/lab/: p1-adamw.toml  p1-muon-cwd.toml  p1-muon.toml  p2-proxy-24m.toml  p2-proxy-8m.toml  p2-target-70m.toml  p3-cosine.toml  p3-sf.toml  p3-wsd.toml  p4-ce-only.toml  p4-ema-n10.toml  p4-ema.toml  p4-jepa-0.5-0.0.toml  p4-jepa-0.5-0.1.toml  p4-jepa-0.7-0.15.toml  p4-objective.toml
docs/: DEPLOY_ZERO_DOWNTIME.md  DOI_PROVENANCE.md  EXPERIMENTAL_GF_VARIANTS.md  RAILWAY_DEPLOYMENT.md  SCARAB_WORKER.md  TRAINING_FLOW_V2.md
igla-dash/: .gitignore  Makefile  README.md  package.json
manifests/: wave9-asymlogit-ngram.GATED-ON-509.json  wave9-asymlogit-ngram.json
migration/: Cargo.toml
migration/src/: lib.rs  m20260509_000001_init_schema.rs  m20260510_000001_step_to_bigint.rs  m20260510_000002_bpb_samples_ema_bpb.rs  main.rs
migration/tests/: idempotent.rs
migrations/: 0003_strategy_queue_final_metrics.sql  002_scarab_stateless.sql  003_goldenfloat_full_family.sql
queen-hive-mcp/: Cargo.toml  README.md
queen-hive-mcp/src/: lib.rs  main.rs
scarab-pull-loop/: Cargo.toml  Dockerfile  Dockerfile.v5  README.md
scarab-pull-loop/docs/: ADR-0042-pull-loop.md
scarab-pull-loop/migrations/: 001_scarab_strategy.sql
scarab-pull-loop/src/: lib.rs  main.rs
scripts/: deploy-seeds.sh  entrypoint.sh  entrypoint_rt.sh  launch_E41_E45.sh  p1-deploy.sh  railway-seed-deploy.sh  wave29_smoke_test.sh
src/: arch_config.rs  attention.rs  backward.rs  bench.rs  champion.rs  checkpoint.rs  config.rs  data.rs  data.rs.old  entrypoint_env.rs  fake_quant.rs  forward.rs  gf16.rs  igla.rs  invariants.rs  jepa.rs  ledger.rs  lib.rs  model.rs  model.rs.old  model_hybrid_attn.rs  mup.rs  neon_writer.rs  objective.rs  optimizer.rs  optimizer.rs.old  ortho_init_baseline.rs  phi_ortho_init.rs  pipeline.rs  real_igla_model.rs  real_igla_trainer.rs  residual_mix.rs  seed_canon.rs  sliding_eval.rs  swa_phi.rs  tokenizer.rs  train_loop.rs  train_model.rs  transformer.rs  transformer_trainer.rs  (+1 more)
tests/: arch_config.rs  canon_name_seed_range.rs  champion_reproduction.rs  cli_format_propagation.rs  embargo_block.rs  entrypoint_corpus_args.rs  entrypoint_env.rs  invariants_match.rs  ledger_seaorm.rs  neon_writer_failure_visibility.rs  preregistration_seed_lock.rs  preregistration_seed_lock_final.rs  reproduce_champion.rs  scarab_args_pass_through.rs  scarab_contract.rs  scarab_writeback_contract.rs  seed_canon.rs  trios_777_env_alias_promotion.rs
trinity_constitution/: .gitignore  CONSTITUTION.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
trinity_constitution/.github/workflows/: ci.yml  docker.yml
trinity_constitution/crates/trinity-core/: Cargo.toml  README.md
trinity_constitution/crates/trinity-core/src/: bpb.rs  invariants.rs  lib.rs  phi.rs
trinity_constitution/crates/trinity-experiments/: Cargo.toml  README.md
trinity_constitution/crates/trinity-experiments/src/: lib.rs  migration.rs  repo.rs  schema.rs
trinity_constitution/crates/trinity-gardener/: Cargo.toml  README.md
trinity_constitution/crates/trinity-gardener/src/: main.rs
trinity_constitution/crates/trinity-orchestrator/: Cargo.toml  README.md
trinity_constitution/crates/trinity-orchestrator/src/: main.rs
trinity_constitution/crates/trinity-runner/: Cargo.toml  README.md
trinity_constitution/crates/trinity-runner/src/: main.rs
trinity_constitution/crates/trinity-trainer/: Cargo.toml  README.md
trinity_constitution/crates/trinity-trainer/src/: lib.rs  run.rs
trinity_constitution/migrations/: 0001_initial.sql
(+58 files in other folders)
