[package]
name        = "trios-trainer"
version     = "0.1.0"
edition     = "2021"
authors     = ["Dmitrii Vasilev <gierenmumindvy1t@hotmail.com>"]
license     = "MIT"
description = "Single source of truth for IGLA RACE training (gHashTag/trios#143). Portable Rust-only pipeline that runs on any CPU machine, Railway, Fly, or Docker. Anchor: phi^2 + phi^-2 = 3."
repository  = "https://github.com/gHashTag/trios-trainer-igla"
homepage    = "https://github.com/gHashTag/trios-trainer-igla"
readme      = "README.md"
keywords    = ["machine-learning", "training", "transformer", "jepa", "trios"]
categories  = ["science", "command-line-utilities"]

[lib]
name = "trios_trainer"
path = "src/lib.rs"

[[bin]]
name = "trios-train"
path = "src/bin/trios-train.rs"

[features]
default = []
trios-integration = []
ci-strict = []

[dependencies]
anyhow             = "1.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
toml               = "0.8"
clap               = { version = "4.5", features = ["derive", "env"] }
chrono             = { version = "0.4", features = ["serde"] }
rand               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha1               = "0.10"

[dev-dependencies]
tempfile = "3.10"
