[package]
name        = "trios-trainer"
version     = "0.1.0"
edition     = "2021"
autobins    = false
authors     = ["Dmitrii Vasilev <gierenmumindvy1t@hotmail.com>"]
license     = "MIT"
description = "Single source of truth for IGLA RACE training (gHashTag/trios#143). Portable Rust-only pipeline that runs on any CPU machine, Railway, Fly, or Docker. Anchor: phi^2 + phi^-2 = 3."
repository  = "https://github.com/gHashTag/trios-trainer-igla"
homepage    = "https://github.com/gHashTag/trios-trainer-igla"
readme      = "README.md"
keywords    = ["machine-learning", "training", "transformer", "jepa", "trios"]
categories  = ["science", "command-line-utilities"]

[lib]
name = "trios_trainer"
path = "src/lib.rs"

[[bin]]
name = "trios-train"
path = "src/bin/trios-train.rs"

[[bin]]
name = "trios-igla"
path = "src/bin/trios-igla.rs"

[[bin]]
name = "hybrid_train"
path = "src/bin/hybrid_train.rs"

[[bin]]
name = "seed_emit"
path = "src/bin/seed_emit.rs"

[[bin]]
name = "ledger_check"
path = "src/bin/ledger_check.rs"

[[bin]]
name = "qk_gain_check"
path = "src/bin/qk_gain_check.rs"

[[bin]]
name = "honey_audit"
path = "src/bin/honey_audit.rs"

[[bin]]
name = "cpu_train"
path = "src/bin/cpu_train.rs"

[[bin]]
name = "igla_train"
path = "src/bin/igla_train.rs"

[[bin]]
name = "ngram_train"
path = "src/bin/ngram_train.rs"

[[bin]]
name = "ngram_train_gf16"
path = "src/bin/ngram_train_gf16.rs"

# TODO: fix imports - requires missing modules (bench, backward, etc.)
# [[bin]]
# name = "train_cpu"
# path = "src/bin/train_cpu.rs"

[[bin]]
name = "train_v2"
path = "src/bin/train_v2.rs"

# TODO: fix imports - requires transformer_trainer module
# [[bin]]
# name = "transformer_train"
# path = "src/bin/transformer_train.rs"

# TODO: fix imports - requires trinity_3k module
# [[bin]]
# name = "trinity_3k_fineweb_train"
# path = "src/bin/trinity_3k_fineweb_train.rs"

# TODO: fix imports - requires trinity_3k module
# [[bin]]
# name = "trinity_3k_simple_train"
# path = "src/bin/trinity_3k_simple_train.rs"

# TODO: fix imports - requires trinity_3k module
# [[bin]]
# name = "trinity_3k_tinyshakespeare"
# path = "src/bin/trinity_3k_tinyshakespeare.rs"

[[bin]]
name = "trinity_pr1722"
path = "src/bin/trinity_pr1722.rs"

# TODO: fix imports - requires backward, bench, swa_phi, etc.
# [[bin]]
# name = "trinity_tournament"
# path = "src/bin/trinity_tournament.rs"

[[bin]]
name = "arch_explorer"
path = "src/bin/arch_explorer.rs"

# TODO: fix imports - requires attention module
# [[bin]]
# name = "attn_train"
# path = "src/bin/attn_train.rs"

# TODO: fix imports - requires bench module
# [[bin]]
# name = "bench_cpu"
# path = "src/bin/bench_cpu.rs"

[[bin]]
name = "gf16_test"
path = "src/bin/gf16_test.rs"

[[bin]]
name = "igla_trigram"
path = "src/bin/igla_trigram.rs"

# TODO: fix imports - requires trios_phi_schedule external crate
# [[bin]]
# name = "lr_calibration"
# path = "src/bin/lr_calibration.rs"

[[bin]]
name = "lstm_train"
path = "src/bin/lstm_train.rs"

[[bin]]
name = "r12_optimizer_race"
path = "src/bin/r12_optimizer_race.rs"

[[bin]]
name = "tjepa_train"
path = "src/bin/tjepa_train.rs"

[[bin]]
name = "tri"
path = "src/bin/tri.rs"

[features]
# Default builds standalone with internal stub modules. No network deps required.
default = []
race = []
# Enable when running alongside the trios workspace — pulls invariants, ASHA and
# victory gate from the canonical implementations via git.
trios-integration = []
# Enable in CI to enforce embargo + triplet validation strictly.
ci-strict = []

[dependencies]
# Internal canonical crates (opt-in via `trios-integration` feature).
# Temporarily disabled due to submodule issue — use local path or fix submodule.
# trios-igla-race        = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }
# trios-precision-router = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }
# trios-phi-schedule     = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }
# trios-golden-float     = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }

# Standard
anyhow             = "1.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
toml               = "0.8"
clap               = { version = "4.5", features = ["derive", "env"] }
chrono             = { version = "0.4", features = ["serde"] }
rand               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha1               = "0.10"
uuid               = { version = "1", features = ["v4"] }
tokio              = { version = "1", features = ["full"] }
tokio-postgres     = "0.7"

[dev-dependencies]
tempfile = "3.10"
