[workspace]
# Workspace includes the migration subcrate (sea-orm-migration)
members = [".", "migration"]
# Empty resolver comment preserved for compatibility

[package]
name        = "trios-trainer"
version     = "0.1.0"
edition     = "2021"
autobins    = false
authors     = ["Dmitrii Vasilev <gierenmumindvy1t@hotmail.com>"]
license     = "MIT"
description = "Single source of truth for IGLA RACE training (gHashTag/trios#143). Portable Rust-only pipeline that runs on any CPU machine, Railway, Fly, or Docker. Anchor: phi^2 + phi^-2 = 3."
repository  = "https://github.com/gHashTag/trios-trainer-igla"
homepage    = "https://github.com/gHashTag/trios-trainer-igla"
readme      = "README.md"
keywords    = ["machine-learning", "training", "transformer", "jepa", "trios"]
categories  = ["science", "command-line-utilities"]

[lib]
name = "trios_trainer"
path = "src/lib.rs"

[[bin]]
name = "entrypoint"
path = "src/bin/entrypoint.rs"

[[bin]]
name = "trios-train"
path = "src/bin/trios-train.rs"

[[bin]]
name = "trios-igla"
path = "src/bin/trios-igla.rs"

[[bin]]
name = "hybrid_train"
path = "src/bin/hybrid_train.rs"

[[bin]]
name = "seed_emit"
path = "src/bin/seed_emit.rs"

[[bin]]
name = "ledger_check"
path = "src/bin/ledger_check.rs"

[[bin]]
name = "qk_gain_check"
path = "src/bin/qk_gain_check.rs"

[[bin]]
name = "honey_audit"
path = "src/bin/honey_audit.rs"

[[bin]]
name = "cpu_train"
path = "src/bin/cpu_train.rs"

[[bin]]
name = "igla_train"
path = "src/bin/igla_train.rs"

[[bin]]
name = "ngram_train"
path = "src/bin/ngram_train.rs"

[[bin]]
name = "ngram_train_gf16"
path = "src/bin/ngram_train_gf16.rs"

# TODO: fix imports - requires missing modules (bench, backward, etc.)
# [[bin]]
# name = "train_cpu"
# path = "src/bin/train_cpu.rs"

[[bin]]
name = "train_v2"
path = "src/bin/train_v2.rs"

# Smoke proof binary — minimal end-to-end pipeline test, runs in <60s on CPU
# with synthetic data and writes one bpb_samples row. See src/bin/smoke_train.rs.
[[bin]]
name = "smoke_train"
path = "src/bin/smoke_train.rs"

# Scarab Worker — fungible-pool claim loop. One image, N replicas.
# See src/bin/scarab.rs and docs/SCARAB_WORKER.md.
[[bin]]
name = "scarab"
path = "src/bin/scarab.rs"

# TODO: fix imports - requires transformer_trainer module
# [[bin]]
# name = "transformer_train"
# path = "src/bin/transformer_train.rs"

# TODO: fix imports - requires trinity_3k module
# [[bin]]
# name = "trinity_3k_fineweb_train"
# path = "src/bin/trinity_3k_fineweb_train.rs"

# TODO: fix imports - requires trinity_3k module
# [[bin]]
# name = "trinity_3k_simple_train"
# path = "src/bin/trinity_3k_simple_train.rs"

# TODO: fix imports - requires trinity_3k module
# [[bin]]
# name = "trinity_3k_tinyshakespeare"
# path = "src/bin/trinity_3k_tinyshakespeare.rs"

[[bin]]
name = "trinity_pr1722"
path = "src/bin/trinity_pr1722.rs"

# TODO: fix imports - requires backward, bench, swa_phi, etc.
# [[bin]]
# name = "trinity_tournament"
# path = "src/bin/trinity_tournament.rs"

[[bin]]
name = "arch_explorer"
path = "src/bin/arch_explorer.rs"

# TODO: fix imports - requires attention module
# [[bin]]
# name = "attn_train"
# path = "src/bin/attn_train.rs"

# TODO: fix imports - requires bench module
# [[bin]]
# name = "bench_cpu"
# path = "src/bin/bench_cpu.rs"

[[bin]]
name = "gf16_test"
path = "src/bin/gf16_test.rs"

[[bin]]
name = "igla_trigram"
path = "src/bin/igla_trigram.rs"

# TODO: fix imports - requires trios_phi_schedule external crate
# [[bin]]
# name = "lr_calibration"
# path = "src/bin/lr_calibration.rs"

[[bin]]
name = "lstm_train"
path = "src/bin/lstm_train.rs"

[[bin]]
name = "r12_optimizer_race"
path = "src/bin/r12_optimizer_race.rs"

[[bin]]
name = "tjepa_train"
path = "src/bin/tjepa_train.rs"

[[bin]]
name = "tri"
path = "src/bin/tri.rs"

[features]
# Default builds standalone with internal stub modules. No network deps required.
default = []
race = []
# Enable when running alongside the trios workspace — pulls invariants, ASHA and
# victory gate from the canonical implementations via git.
trios-integration = []
# Enable in CI to enforce embargo + triplet validation strictly.
ci-strict = []
# Smoke-proof: minimal train that runs in <60s with synthetic data, steps=1,
# CPU-only, and writes one row to bpb_samples. Used by .github/workflows/smoke.yml
# to prove the queue → worker → trainer → JSONL → DB pipe is alive end-to-end.
# Refs: trios-trainer-igla#57, trios#445.
smoke = []
# GPU acceleration using Candle with CUDA support
gpu = ["candle-core", "candle-nn"]
# GF16 ternary matmul kernel — compile-time gate for Wave 32.
# Build with: cargo build --features gf16
# Without this flag, GF16_ENABLED=true at runtime returns an error.
gf16 = []


[dependencies]
# GPU/ML framework for CUDA support
candle-core = { version = "0.7", features = ["cuda"], optional = true }
candle-nn   = { version = "0.7", features = ["cuda"], optional = true }

# Standard[dependencies]
# Internal canonical crates (opt-in via `trios-integration` feature).
# Temporarily disabled due to submodule issue — use local path or fix submodule.
# trios-igla-race        = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }
# trios-precision-router = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }
# trios-phi-schedule     = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }
# trios-golden-float     = { git = "https://github.com/gHashTag/trios.git", branch = "main", optional = true }

# Standard
anyhow             = "1.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
toml               = "0.8"
# Pin to version compatible with Rust 1.82 (clap_lex 1.0.0 doesn't require edition2024)
clap               = { version = "=4.5.4", features = ["derive", "env"] }
chrono             = { version = "0.4", features = ["serde"] }
rand               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha1               = "0.10"
uuid               = { version = "1", features = ["v4"] }
tokio              = { version = "1", features = ["full"] }
tokio-postgres       = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
tokio-postgres-rustls = "0.12"
rustls               = "0.23"
webpki-roots         = "0.26"
ureq                  = "2.12"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = "1.1"
migration = { path = "migration" }

[dev-dependencies]
tempfile = "3.10"

# Clippy debt living on `main` since before integration PR #32. Allow-listed at
# the package level so CI stays green while we focus on Gate-2 (deadline
# 2026-04-30 23:59 UTC). Each lint will be paid down in a dedicated
# technical-debt PR after merge. R5-honest: NOT introduced by PR #32.
[lints.rust]
dead_code = "allow"
unexpected_cfgs = "allow"
unused_imports = "allow"
unused_parens = "allow"
unused_variables = "allow"
unused_mut = "allow"

[lints.clippy]
approx_constant = "allow"
assertions_on_constants = "allow"
clone_on_copy = "allow"
collapsible_if = "allow"
derivable_impls = "allow"
excessive_precision = "allow"
field_reassign_with_default = "allow"
float_cmp = "allow"
if_same_then_else = "allow"
let_and_return = "allow"
manual_clamp = "allow"
manual_memcpy = "allow"
manual_range_contains = "allow"
module_inception = "allow"
needless_borrow = "allow"
needless_pass_by_value = "allow"
needless_range_loop = "allow"
needless_return = "allow"
neg_cmp_op_on_partial_ord = "allow"
ptr_arg = "allow"
redundant_clone = "allow"
redundant_closure = "allow"
redundant_field_names = "allow"
should_implement_trait = "allow"
single_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_cast = "allow"
useless_conversion = "allow"
useless_vec = "allow"

[[bin]]
name = "bpb_smoke"
path = "src/bin/bpb_smoke.rs"

[[bin]]
name = "matrix_runner"
path = "src/bin/matrix_runner.rs"

[[bin]]
name = "matrix_ledger"
path = "src/bin/matrix_ledger.rs"

