[package]
name = "migration"
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev <admin@t27.ai>"]
description = "SeaORM migration crate for trios-trainer-igla ledger schema"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
tokio = { version = "1", features = ["full"] }
