[workspace]

[package]
name = "scarab-pull-loop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scarab"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = false
