[package]
name = "trinity-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Local dependencies (none for L0+L1)
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
