[package]
name = "trinity-experiments"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
tokio-postgres-rustls.workspace = true
async-trait.workspace = true
bytes = "1"

[dev-dependencies]
tempfile.workspace = true
