[package]
name = "trinity-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "trinity-reconcile"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
