[package]
name = "trinity-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "trinity-runner"
path = "src/main.rs"

[dependencies]
trinity-core = { path = "../trinity-core" }
trinity-experiments = { path = "../trinity-experiments" }
trinity-trainer = { path = "../trinity-trainer" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
uuid.workspace = true
clap.workspace = true
