[package]
name = "trinity-trainer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
trinity-core = { path = "../trinity-core" }
trinity-experiments = { path = "../trinity-experiments" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
